@@ -10,6 +10,7 @@ Version 3.00  2011-06-12
  * client_func.h add functions fdfs_tracker_group_equals and 
    fdfs_get_file_ext_name
  * bug fixed: test/dfs_func_pc.c compile ok
+ * storage server check free space enough when upload a file
 
 Version 2.09  2011-02-19
  * bug fixed: write_to_binlog_index then increase g_binlog_index (feedback 
